Change scale for controlling pitch in flying mode
This change helps with the sensitivity of directing the pawn while flying quickly.

--- a/Mosquito/Config/DefaultInput.ini
+++ b/Mosquito/Config/DefaultInput.ini
@@ -92,7 +92,8 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="FlyingSpeedUp",Scale=-1.000000,Key=Gamepad_LeftShoulder)
 +AxisMappings=(AxisName="Turn Right / Left",Scale=1.000000,Key=MouseX)
 +AxisMappings=(AxisName="Look Up / Down",Scale=1.000000,Key=MouseY)
-+AxisMappings=(AxisName="Flight Pitch Up / Down",Scale=1.000000,Key=Gamepad_LeftY)
++AxisMappings=(AxisName="Flight Pitch Up / Down",Scale=-0.300000,Key=Gamepad_LeftY)
++AxisMappings=(AxisName="Flight Yaw Left / Right",Scale=0.500000,Key=Gamepad_LeftX)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
