Add Action Input to release from target
Adds a button that allows the player to release themselves from a target
they've attached to.

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,7 +1,9 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=CBF5F2844D9C13F1825A4FA5645A0099
 ProjectName=Third Person Game Template
+bUseBorderlessWindow=False
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
